Update and rename 2019-09-simetria.md to 2019-09-10-simetria.md

--- a/_publications/2019-09-10-simetria.md
+++ b/_publications/2019-09-10-simetria.md
@@ -1,12 +1,12 @@
 ---
 title: "De Grupos a Grupoides: uma perspectiva de simetria em dinâmica não-linear"
 collection: publications
-permalink: /publication/2019-09-simetria
+permalink: /publication/2019-09-10-simetria
 excerpt: 'Apresentação sobre estruturas algébricas e sua relação com simetria e como isso se manifesta em dinâmica.'
 date: 2019-09-10
 venue: 'Seminários do ICT UNIFESP'
-slidesurl: 'http://academicpages.github.io/files/grupoids2019.pdf'
-citation: 'MELO, Antonio. &quot;Paper Title Number 1.&quot; <i>Journal 1</i>. (2019).'
+slidesurl: 'http://antmelo.github.io/files/grupoids2019.pdf'
+citation: 'MELO, Antonio. <b>De Grupos a Grupoides: uma perspectiva de simetria em dinâmica não-linear</b>. <i>Seminários do ICT UNIFESP</i>. (2019).'
 ---
 
 A arquitetura de rede é um gráfico que mostra os acoplamentos entre células e quais células e acoplamentos são idênticos. Simetrias na arquitetura de rede foram usadas anteriormente para explorar certas propriedades de soluções para certos sistemas, como sincronia ou ondas viajantes. A simetria, entretanto, aplica-se diretamente apenas às redes mais regulares. Para uma classe maior de redes de células acopladas, as simetrias locais definidas em parte da rede podem substituir as simetrias como preditores de dinâmicas interessantes e importantes. Essas simetrias locais formam um grupóide e é essa estrutura grupóide que é usada para analisar propriedades de soluções e transições entre soluções em sistemas de células acopladas.
