Update and rename 2023-09-13-tema.md to 2024-09-13-tema.md

--- a/_publications/2024-09-13-tema.md
+++ b/_publications/2024-09-13-tema.md
@@ -3,10 +3,10 @@ title: "Bifurcações em Redes Hamiltonianas Acopladas e o Problema dos Três Co
 collection: publications
 permalink: /publication/2023-09-13-tema
 excerpt: 'Resultados recentes em redes de sistemas hamiltonianos acoplados linearizados com uma discussão do teorema de Hopf hamiltoniano neste contexto.'
-date: 2023-09-13
+date: 2024-09-13
 venue: 'Trends in Computational and Applied Mathematics, 25'
 paperurl: 'http://antmelo.github.io/files/1571-10457-1-LE.pdf'
-citation: 'MELO, Antonio. <b>Bifurcações em Redes Hamiltonianas Acopladas e o Problema dos Três Corpos</b>. <i>Trends in Computational and Applied Mathematics, 25</i>. (2024). doi: 10.5540/tcam.2024.025.e01571.'
+citation: 'MELO, Antonio. <b>Bifurcações em Redes Hamiltonianas Acopladas e o Problema dos Três Corpos</b>. <i>Trends in Computational and Applied Mathematics, <b>25</b></i>. (2024). doi: 10.5540/tcam.2024.025.e01571.'
 ---
 
 O formalismo de células acopladas é um jeito sistemático de representar e estudar equações
